--- a/_posts/2018-10-16-til.md
+++ b/_posts/2018-10-16-til.md
@@ -12,3 +12,68 @@ categories: TIL
 
 
 
+개발 환경 셋팅하면서 몇 가지 공부한 자료들이다.   
+
+### Vagrant  
+
+vagrant는 OS기반 가상화(ex. virtualbox) 관리 툴이다.   
+
+Docker를 배울 때는 docker가 짱이라고 배웠는데.. 그럼 vagrant와 docker의 차이점은 어떤 것인가?  
+
+https://www.upguard.com/articles/docker-vs-vagrant  
+
+결론을 보면, 이 둘은 경쟁관계처럼 보이지만 상호 보완적으로 사용하는 방법을 말하고 있다.   
+
+
+
+__Vagrant 사용__  
+
+Dockerfile 처럼 Vagrantfile을 작성해야 한다. ruby 문법으로 되어 있다.   
+
+vagrant 베이직 참고 자료  
+
+1. https://junistory.blogspot.com/2017/08/virtualbox-vagrant.html  
+2. http://rangken.github.io/blog/2015/vagrant-1/  
+3. http://seednote.tistory.com/44  
+4. https://ja.stackoverflow.com/questions/42546/vagrant%E3%81%AEbox%E3%81%AE%E3%83%80%E3%82%A6%E3%83%B3%E3%83%AD%E3%83%BC%E3%83%89%E3%81%8C%E5%87%BA%E6%9D%A5%E3%81%AA%E3%81%84-ssl-error-syscall-errno-60  
+
+------
+
+### Heroku  
+
+Heroku를 정확히 어떤 용도로 사용하고 있는지 파악하지 못했다. 헤로쿠는 PaaS의 클라우스 서비스인데, 그렇다면 AWS를 대체해서 사용하고 있는건지? (그렇지는 않을 텐데..)   
+
+Heroku에서 서비스 운영 시 의 공식 db는 postgresql이다. 그래서 회사에서는 mysql이 아닌 postgresql을 사용하고 있다고 들었고, 로컬에서 서버를 띄우기 전 db dump 파일을 heroku에서 가져오기를 하는 중이다. (굉장히 긴 시간..)  
+
+heroku db 관련 cli를 간략하게나마 공부해야겠다.   
+
+참고 : [Heroku Postgres](https://devcenter.heroku.com/categories/heroku-postgres)  
+
+
+
+__Heroku tutorial__  
+
+지금은 vagrant ubuntu에서 진행하지만 연습을 위해 mac에서 진행해보려고 한다.   
+
+학습자료 : https://devcenter.heroku.com/articles/getting-started-with-gradle-on-heroku  
+
+---
+
+### SSH  
+
+aws를 좀 더 편하게 접속하기 위해서 키 설정을 해 준다. 키 생성과 사용에 관한 내용은 생활코딩을 참고했다. 좋은 자료이다. [SSH Key - 비밀번호 없이 로그인](https://opentutorials.org/module/432/3742)   
+
+---
+
+### Eclair   
+
+이 것은 많은 AWS 인스턴스들을 터미널 상에서 손쉽게 사용할 수 있도록 만든 오픈소스이다. 데브시스터즈에서 만들었다. https://github.com/devsisters/eclair  
+
+aws cli & tmux 가 필요하다.   
+
+참고 자료  
+
+[AWS CLI](https://docs.aws.amazon.com/ko_kr/cli/latest/userguide/cli-chap-getting-started.html) , [EC2용 SSH Tool - Eclair](https://www.slideshare.net/awskr/ec2-ssh-tool-eclair) , [[영상]Eclair를 활용한 손쉬운 EC2 인스턴스 관리하기](https://www.youtube.com/watch?v=aTzYkIt1LAw)   
+
+
+
