--- a/_posts/2018-10-29-til.md
+++ b/_posts/2018-10-29-til.md
@@ -34,6 +34,14 @@ http통신은 vue-resource 말고 axios를 쓰고 있었다.
 
 
 
+### Vuex  
+
+Vuex 기초 강의 1-3  
+
+https://joshua1988.github.io/web-development/vuejs/vuex-start/  
+
+
+
 ### ES6  
 
 기초 문법 공부  
@@ -45,6 +53,8 @@ https://gist.github.com/marocchino/841e2ff62f59f420f9d9
 [개발자가 필히 알아야 할 ES6 10가지 기능](https://blog.asamaru.net/2017/08/14/top-10-es6-features/)  
 
 [Vue.js 개발을 위한 주요 ES6 문법 4가지](https://joshua1988.github.io/web-development/translation/essential-es6-features-for-vuejs/)  
+
+[자바스크립트 비동기 처리와 콜백 함수](https://joshua1988.github.io/web-development/javascript/javascript-asynchronous-operation/)  
 
 **<u>module</u>**  
 
