--- a/_posts/2018-10-31-til.md
+++ b/_posts/2018-10-31-til.md
@@ -107,8 +107,61 @@ const loginCheck(ctx, next) => {
 
 
 
+### 플러그인  
+
+도큐먼트에 있는 말이 갑자기 와 닿았다.  
+
+> 플러그인은 일반적으로 **전역 수준 기능**을 Vue에 추가합니다. 플러그인에는 엄격하게 정의된 범위는 없습니다. 일반적으로 작성할 수있는 플러그인에는 여러 유형이 있습니다.  
+
+https://kr.vuejs.org/v2/guide/plugins.html  
+
+플러그인을 만드려면 install 메소드를 노출해야 한다.  
+
+분석 중인 프로젝트에 이런 코드가 있다.  
+
+```js
+// layout/index.js
+import Default from './layouts/Default'
+import Simple from './layouts/Simple'
+
+export default {
+    install(Vue, options) {
+        Vue.component('default-layout', Default)
+        Vue.component('simple-layout', Simple)
+    }
+}
+```
+
+이 것을 사용하는 곳에서는 
+
+```js
+// app.js
+import Layout from './layout'  
+
+Vue.use(Layout)
+
+const app = new Vue({
+    el: '#app',
+    data: {
+        viewComponent: {
+            render: h => h('simple-layout', {}, [h('loading')])
+        }
+    },
+    store,
+    render(h) {
+        return h(this.viewComponent)
+    }
+})
+```
+
+이런 식으로 전역 수준의 기능을 불러와서 사용할 수가 있다는 것이다. (하.. 알아내는 데 참 오래걸린다ㅠ)  
+
 ### git  
 
 git ignore 문법 및 적용 안될때 해결  
 
 https://nesoy.github.io/articles/2017-01/Git-Ignore  
+
+git 취소 기능들  
+
+- 가끔씩 블로그 포스팅 철자 틀린거 가지고 무의미한 커밋로그 쌓이는 걸 앞으로 깨끗하게 관리하고자 찾아봤다. https://gmlwjd9405.github.io/2018/05/25/git-add-cancle.html   
