--- a/_posts/2018-10-31-til.md
+++ b/_posts/2018-10-31-til.md
@@ -165,3 +165,14 @@ https://nesoy.github.io/articles/2017-01/Git-Ignore
 git 취소 기능들  
 
 - 가끔씩 블로그 포스팅 철자 틀린거 가지고 무의미한 커밋로그 쌓이는 걸 앞으로 깨끗하게 관리하고자 찾아봤다. https://gmlwjd9405.github.io/2018/05/25/git-add-cancle.html   
+
+
+
+### Spring   
+
+[스프링 부트 기반 멀티모듈 프로젝트 구성 가이드](https://github.com/ihoneymon/boot-spring-boot/wiki/%EC%8A%A4%ED%94%84%EB%A7%81-%EB%B6%80%ED%8A%B8-%EA%B8%B0%EB%B0%98-%EB%A9%80%ED%8B%B0%EB%AA%A8%EB%93%88-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-%EA%B5%AC%EC%84%B1-%EA%B0%80%EC%9D%B4%EB%93%9C)  
+
+[Gradle 멀티 프로젝트 관리](https://jojoldu.tistory.com/123)  
+
+[maven 멀티 모듈](http://wonwoo.ml/index.php/post/601)  
+
