--- a/_posts/2018-11-01-til.md
+++ b/_posts/2018-11-01-til.md
@@ -51,46 +51,29 @@ categories: ETC
 2. 백엔드 프로젝트가 하나도 구현되어 있지 않은 상황에서 당장 프론트엔드 프로젝트를 동시에 시작해야 할 때   
 3. 백엔드 프로젝트가 50% 정도 구현되어 있지만 개발자의 로컬에서만 돌아가는 상태  
 4. 백엔드 프로젝트가 50% 정도 구현되어 있고 중간 중간 단계마다 EC2에 올라가 있는 상태  
-5. 풀스택 개발자가 로컬에 백엔드 프로젝트를 띄워논 후에 프론트엔드 프로젝트를 시작하려는 상태  
+5. 풀스택 개발자가 로컬에 백엔드 프로젝트를 띄워논 후에 프론트엔드 프로젝트를 시작하려는 상태   
 
 
 
 **1번** - 백엔드 프로젝트가 100% 구현되어 EC2에 고유 도메인을 가지고 (예를 들어 https://www.larry.com ) 있을 때     
 
-- 저장소를 따로 만들 수 있다.  
-- ajax요청에 대해서 EC2 도메인으로 리소스 요청을 할 수 있으나, 크로스 오리진 정책에 걸려 브라우저가 요청을 허용하지 않는다. 자바스크립트 표준 정책에 의하면 js에서 ajax요청을 보낼 때 동일 출처(프로토콜, 호스트명, 포트)가 아니면 브라우저에서 요청을 날리지 않는 것을 말한다. 
+- 저장소를 따로 만들 수 있다.   
+- ajax요청에 대해서 EC2 도메인으로 리소스 요청을 할 수 있으나, 크로스 오리진 정책에 걸려 브라우저가 요청을 허용하지 않는다. 자바스크립트 표준 정책에 의하면 js에서 ajax요청을 보낼 때 동일 출처(프로토콜, 호스트명, 포트)가 아니면 브라우저에서 요청을 날리지 않는 것을 말한다.   
 - 프론트엔드 개발을 하기 위해 번들러로 로컬에서 개발 서버를 띄운 후에(`localhost:1234`) EC2에 있는 `www.larry.com/users/1` 에 요청을 하는 순간 내 로컬에 있는 크롬브라우저가 자바스크립트 실행 엔진 표준에 의거하여 요청을 날리는 것을 거부한다는 것이다.   
 - 이 때 해결할 수 있는 방법은 [여기](https://brunch.co.kr/@adrenalinee31/1)에 잘 설명되어 있다. 정리하면   
   1. 브라우저에서 그냥 요청을 보내도록 강제 설정을 해 주던지  
-  2.  서버를 통제할 수 있다면 서버에서 크로스 오리진 도메인에 대한 요청에 대해 허용해 줄 수 있다. 스프링의 어노테이션이나 서블릿 필터 등을 사용하면 된다.  
-- 일단 프론트엔드 개발 완료!  
-- 프론트엔드 개발을 완료하고 번들링 후에 결과물을 어디에 배포해야할까?
-
-- EC2
-
-
-
+  2.  서버를 통제할 수 있다면 서버에서 크로스 오리진 도메인에 대한 요청에 대해 허용해 줄 수 있다.   스프링의 어노테이션이나 서블릿 필터 등을 사용하면 된다.  
+- 일단 프론트엔드 개발 완료!   
+- 프론트엔드 개발을 완료하고 번들링 후에 결과물을 어디에 배포해야할까?   
+- 새로운 EC2 인스턴스를 만든다.   
+- nginx를 설치하고 nginx에 번들링 결과물을 scp로 복사해 넣는다. 혹은 ci툴을 이용하여 배포한다.    
+- nginx에 프록시를 설정하여 api서버로 전달되게 한다.   
 
 
 
+위 과정 중에 사실 배포 하는 프로세스가 정확히 어떤 것인지, 경험해 보지 않았기 때문에 잘 모르겠으나 일단 포스트가 수정될 여지가 있음을 남기고 1차 정리를 해본다.   
 
-프론트엔드 개발 할 때, localhost:1234, localhost:8080의 정체??  
+[다른 참고](https://steemit.com/font-end/@caesium133/21-1)  
 
-나는 이 것을 클라이언트 서버를 띄운 것이라고 불러왔는데, 찾아 보니 개발용 서버를 띄운 것이라고 한다. js파일 변경에 대한 빠른 피드백을 받기 위해 도움을 받는 것 쯤으로 설명하는 곳이 많았다.   
 
-**궁금한 점**  
-
-프론트엔드, 백엔드 코드를 나눠서 개발할 수 있는 이유?  
-
-https://steemit.com/font-end/@caesium133/21-1  
-
-(webpack의 경우) localhost:8080 개발용 서버를 띄웠다는 것은 위 포스트에 따르면 개발 단계에서 웹서버의 포지션을 대체한 것이라고 말하고 있다. nginx에서 프록시를 설정한 것처럼 webpack config에서 설정하고 있는데,   
-
-그렇다면  
-
-Q. 그렇게 개발이 끝난 프론트엔드 프로젝트는 배포 명령어를 통해 번들링 결과물이 생성되고, 그 생성물들을 실제 EC2 인스턴스 안에 설치되어 있는 nignx에다가 scp 하는 것인가??  
-
-크로스 오리진 문제.
-
-어떻게 해결할 것인지??  
 
